--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #86B817;
+    --primary: #4b95db;
     --secondary: #FE8800;
     --light: #F5F5F5;
     --dark: #14141F;
