--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,9 @@
 }
 
 .navbar-light .navbar-brand img {
-    max-height: 60px;
+    max-height: 80px;
     transition: .5s;
+    float: left;
 }
 
 .sticky-top.navbar-light .navbar-brand img {
@@ -445,4 +446,11 @@
 
 .bg-custom{
     background-color:lightsteelblue;
+}
+
+#slogan {
+    color: #FFFFFF;
+    font-size: 17px;
+    display: block;
+    margin-top: 5px;
 }
